<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="16dp"
        style="@style/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewCadastro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        style="@style/editTextForm"
        android:id="@+id/registerUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="text"/>

    <EditText
        style="@style/editTextForm"
        android:id="@+id/registerUserLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sobrenome"
        android:inputType="text"/>

    <Button
        style="@style/buttonForm"
        android:id="@+id/registerButtonUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar" />

</LinearLayout>